@@ -5,11 +5,9 @@ import static uk.gov.companieshouse.efs.web.controller.RemoveDocumentControllerI
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-import javax.validation.Valid;
-import org.apache.commons.lang3.StringUtils;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpSession;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
@@ -89,7 +87,7 @@ public class RemoveDocumentControllerImpl extends BaseControllerImpl implements 
         FileDetailListApi fileDetailsListApi = Optional.ofNullable(submissionApi.getSubmissionForm().getFileDetails())
             .orElseGet(FileDetailListApi::new);
         Optional<FileDetailApi> fileDetailApi = fileDetailsListApi.getList().stream().filter(
-            file -> StringUtils.equals(file.getFileId(), fileId)).findFirst();
+            file -> Objects.equals(file.getFileId(), fileId)).findFirst();
 
         if (!fileDetailApi.isPresent()) {
             return ViewConstants.ERROR.asView();
@@ -121,7 +119,7 @@ public class RemoveDocumentControllerImpl extends BaseControllerImpl implements 
 
         String redirectUri = ViewConstants.DOCUMENT_UPLOAD.asRedirectUri(chsUrl, id, companyNumber);
 
-        if (StringUtils.equals(removeDocumentAttribute.getRequired(), "Y")) {
+        if (Objects.equals(removeDocumentAttribute.getRequired(), "Y")) {
             redirectUri = performRemoveDocument(submissionApi.getId(), fileId, binding,
                 submissionApi.getSubmissionForm());
 
@@ -146,7 +144,7 @@ public class RemoveDocumentControllerImpl extends BaseControllerImpl implements 
 
         // Locate the evidence that we want to remove.
         Optional<FileDetailApi> fileDetails = submissionFormApi.getFileDetails().getList().stream().filter(
-                e -> StringUtils.equals(e.getFileId(), fileId)
+                e -> Objects.equals(e.getFileId(), fileId)
         ).findFirst();
 
         String result = ViewConstants.REMOVE_DOCUMENT.asView();
@@ -167,7 +165,7 @@ public class RemoveDocumentControllerImpl extends BaseControllerImpl implements 
                 List<FileApi> fileApiList = submissionFormApi.getFileDetails().getList().stream()
                         .filter(file -> !file.getFileId().equals(fileId))
                         .map(file -> new FileApi(file.getFileId(), file.getFileName(), file.getFileSize()))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 ApiResponse<SubmissionResponseApi> response = apiClientService.putFileList(id, new FileListApi(fileApiList));
                 logApiResponse(response, id, "PUT /efs-submission-api/submission/" + id + "/files");
